# llm_agent_evolution_3

./: .pylintrc  README.md  pyproject.toml  sample_spec.sh  setup.py  spec.md  task.md
evolver/: __init__.py  agent.py  cli.py  constants.py  dspy_optimizer.py  error_handling.py  evaluation.py  evolution.py  llm.py  main.py  population.py  statistics.py  utils.py
evolver/examples/: counting_task.py  dspy_text_classification.py  run_counting_task.py
evolver/tests/: test_agent.py  test_dspy_optimizer.py  test_e2e.py  test_evolution.py  test_llm.py  test_population.py
examples/: dspy_example.py
